@@ -7,19 +7,18 @@ import java.util.List;
 public class Q77 {
     public List<List<Integer>> combine(int n, int k) {
         List<List<Integer>> res = new ArrayList<>();
-        helper(res, new LinkedList<Integer>(), n, k, 1);
+        helper(res, new ArrayList<Integer>(), n, k, 1);
         return res;
     }
 
-    private void helper(List<List<Integer>> res, LinkedList<Integer> list, int n, int k, int start) {
-        if (list.size() == 2) {
-            res.add(new LinkedList<>(list));
-            return;
+    private void helper(List<List<Integer>> res, ArrayList<Integer> list, int n, int k, int start) {
+        if (list.size() == k) {
+            res.add(new ArrayList<>(list));
         }
-        for (int i = start; i <= n; i++) {
+        for (int i = start; i < n + 1; i++) {
             list.add(i);
             helper(res, list, n, k, i + 1);
-            list.removeLast();
+            list.remove(list.size() - 1);
         }
     }
 }
